fix metrics-table horizontal scrolling

--- a/site/src/app.css
+++ b/site/src/app.css
@@ -132,8 +132,8 @@ table :is(td, th) {
   border: 1px solid gray;
   padding: 2pt 4pt;
 }
-table.roomy :is(td, th) {
-  padding: 5pt 9pt;
+table.metrics :is(td, th) {
+  padding: 2pt 4pt !important;
 }
 tbody tr:nth-child(odd) {
   background: black;
